# Python_sql_postgres

./: pyproject.toml
data/: employees_data.csv
src/: sql_curse.py
