[project]
name = "python-sql-postgres"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"
isort = "^6.0.1"



[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.0"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = true
